// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/channel_invite_modal > should match snapshot for channel_invite_modal with profiles 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="genericModalLabel"
      aria-modal="true"
      class="fade in modal"
      id="addUsersToChannelModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign modal--overflow channel-invite modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
          >
            <div
              class="modal-header"
            >
              <div
                class="GenericModal__header__text_container"
              >
                <div
                  class="GenericModal__header"
                >
                  <h1
                    class="modal-title"
                    id="genericModalLabel"
                  >
                    Add people to testing
                  </h1>
                </div>
              </div>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
            </div>
            <div
              class="overflow-visible modal-body"
            >
              <div
                class="GenericModal__body padding"
              >
                <div
                  class="channel-invite__wrapper"
                >
                  <div
                    class="channel-invite__content"
                  >
                    <div
                      class="filtered-user-list"
                    >
                      <div
                        class="filter-row"
                      >
                        <div
                          class="multi-select__container react-select"
                        >
                          <div
                            class="css-1dedlln"
                            id="selectItems"
                          >
                            <span
                              class="css-1f43avz-a11yText-A11yText"
                              id="react-select-2-live-region"
                            />
                            <span
                              aria-atomic="false"
                              aria-live="polite"
                              aria-relevant="additions text"
                              class="css-1f43avz-a11yText-A11yText"
                              role="log"
                            />
                            <div
                              class="react-select-auto react-select__control css-13cymwt-control"
                            >
                              <div
                                class="react-select-auto react-select__value-container react-select-auto react-select__value-container--is-multi css-hlgwow"
                              >
                                <div
                                  class="react-select-auto react-select__placeholder css-1jqq78o-placeholder"
                                  id="react-select-2-placeholder"
                                >
                                  Search for people or groups
                                </div>
                                <div
                                  class="react-select-auto react-select__input-container css-19bb58m"
                                  data-value=""
                                >
                                  <input
                                    aria-activedescendant=""
                                    aria-autocomplete="list"
                                    aria-describedby="react-select-2-placeholder"
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    aria-invalid="false"
                                    aria-label="Search for people or groups"
                                    autocapitalize="none"
                                    autocomplete="off"
                                    autocorrect="off"
                                    class="react-select-auto react-select__input"
                                    id="react-select-2-input"
                                    role="combobox"
                                    spellcheck="false"
                                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                    tabindex="0"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="multi-select__help"
                          id="multiSelectHelpMemberInfo"
                        />
                      </div>
                      <div
                        class="multi-select__help"
                        id="multiSelectMessageNote"
                      />
                    </div>
                    <div
                      class="multi-select__footer modal-footer"
                    >
                      <button
                        class="btn btn-tertiary btn-tertiary tertiary-button"
                      >
                        Cancel
                      </button>
                      <button
                        class="btn btn-primary "
                        data-testid="saveSetting"
                        id="saveItems"
                        type="submit"
                      >
                        <span>
                          Add
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/channel_invite_modal > should match snapshot for channel_invite_modal with profiles from DMs 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="genericModalLabel"
      aria-modal="true"
      class="fade in modal"
      id="addUsersToChannelModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign modal--overflow channel-invite modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
          >
            <div
              class="modal-header"
            >
              <div
                class="GenericModal__header__text_container"
              >
                <div
                  class="GenericModal__header"
                >
                  <h1
                    class="modal-title"
                    id="genericModalLabel"
                  >
                    Add people to testing
                  </h1>
                </div>
              </div>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
            </div>
            <div
              class="overflow-visible modal-body"
            >
              <div
                class="GenericModal__body padding"
              >
                <div
                  class="channel-invite__wrapper"
                >
                  <div
                    class="channel-invite__content"
                  >
                    <div
                      class="filtered-user-list"
                    >
                      <div
                        class="filter-row"
                      >
                        <div
                          class="multi-select__container react-select"
                        >
                          <div
                            class="css-1dedlln"
                            id="selectItems"
                          >
                            <span
                              class="css-1f43avz-a11yText-A11yText"
                              id="react-select-3-live-region"
                            />
                            <span
                              aria-atomic="false"
                              aria-live="polite"
                              aria-relevant="additions text"
                              class="css-1f43avz-a11yText-A11yText"
                              role="log"
                            />
                            <div
                              class="react-select-auto react-select__control css-13cymwt-control"
                            >
                              <div
                                class="react-select-auto react-select__value-container react-select-auto react-select__value-container--is-multi css-hlgwow"
                              >
                                <div
                                  class="react-select-auto react-select__placeholder css-1jqq78o-placeholder"
                                  id="react-select-3-placeholder"
                                >
                                  Search for people or groups
                                </div>
                                <div
                                  class="react-select-auto react-select__input-container css-19bb58m"
                                  data-value=""
                                >
                                  <input
                                    aria-activedescendant=""
                                    aria-autocomplete="list"
                                    aria-describedby="react-select-3-placeholder"
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    aria-invalid="false"
                                    aria-label="Search for people or groups"
                                    autocapitalize="none"
                                    autocomplete="off"
                                    autocorrect="off"
                                    class="react-select-auto react-select__input"
                                    id="react-select-3-input"
                                    role="combobox"
                                    spellcheck="false"
                                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                    tabindex="0"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="multi-select__help"
                          id="multiSelectHelpMemberInfo"
                        />
                      </div>
                      <div
                        class="multi-select__help"
                        id="multiSelectMessageNote"
                      />
                    </div>
                    <div
                      class="multi-select__footer modal-footer"
                    >
                      <button
                        class="btn btn-tertiary btn-tertiary tertiary-button"
                      >
                        Cancel
                      </button>
                      <button
                        class="btn btn-primary "
                        data-testid="saveSetting"
                        id="saveItems"
                        type="submit"
                      >
                        <span>
                          Add
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/channel_invite_modal > should match snapshot for channel_invite_modal with userStatuses 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="genericModalLabel"
      aria-modal="true"
      class="fade in modal"
      id="addUsersToChannelModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign modal--overflow channel-invite modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
          >
            <div
              class="modal-header"
            >
              <div
                class="GenericModal__header__text_container"
              >
                <div
                  class="GenericModal__header"
                >
                  <h1
                    class="modal-title"
                    id="genericModalLabel"
                  >
                    Add people to testing
                  </h1>
                </div>
              </div>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
            </div>
            <div
              class="overflow-visible modal-body"
            >
              <div
                class="GenericModal__body padding"
              >
                <div
                  class="channel-invite__wrapper"
                >
                  <div
                    class="channel-invite__content"
                  >
                    <div
                      class="filtered-user-list"
                    >
                      <div
                        class="filter-row"
                      >
                        <div
                          class="multi-select__container react-select"
                        >
                          <div
                            class="css-1dedlln"
                            id="selectItems"
                          >
                            <span
                              class="css-1f43avz-a11yText-A11yText"
                              id="react-select-5-live-region"
                            />
                            <span
                              aria-atomic="false"
                              aria-live="polite"
                              aria-relevant="additions text"
                              class="css-1f43avz-a11yText-A11yText"
                              role="log"
                            />
                            <div
                              class="react-select-auto react-select__control css-13cymwt-control"
                            >
                              <div
                                class="react-select-auto react-select__value-container react-select-auto react-select__value-container--is-multi css-hlgwow"
                              >
                                <div
                                  class="react-select-auto react-select__placeholder css-1jqq78o-placeholder"
                                  id="react-select-5-placeholder"
                                >
                                  Search for people or groups
                                </div>
                                <div
                                  class="react-select-auto react-select__input-container css-19bb58m"
                                  data-value=""
                                >
                                  <input
                                    aria-activedescendant=""
                                    aria-autocomplete="list"
                                    aria-describedby="react-select-5-placeholder"
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    aria-invalid="false"
                                    aria-label="Search for people or groups"
                                    autocapitalize="none"
                                    autocomplete="off"
                                    autocorrect="off"
                                    class="react-select-auto react-select__input"
                                    id="react-select-5-input"
                                    role="combobox"
                                    spellcheck="false"
                                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                    tabindex="0"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="multi-select__help"
                          id="multiSelectHelpMemberInfo"
                        />
                      </div>
                      <div
                        class="multi-select__help"
                        id="multiSelectMessageNote"
                      />
                    </div>
                    <div
                      class="multi-select__footer modal-footer"
                    >
                      <button
                        class="btn btn-tertiary btn-tertiary tertiary-button"
                      >
                        Cancel
                      </button>
                      <button
                        class="btn btn-primary "
                        data-testid="saveSetting"
                        id="saveItems"
                        type="submit"
                      >
                        <span>
                          Add
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/channel_invite_modal > should match snapshot with exclude and include users 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="genericModalLabel"
      aria-modal="true"
      class="fade in modal"
      id="addUsersToChannelModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign modal--overflow channel-invite modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
          >
            <div
              class="modal-header"
            >
              <div
                class="GenericModal__header__text_container"
              >
                <div
                  class="GenericModal__header"
                >
                  <h1
                    class="modal-title"
                    id="genericModalLabel"
                  >
                    Add people to testing
                  </h1>
                </div>
              </div>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
            </div>
            <div
              class="overflow-visible modal-body"
            >
              <div
                class="GenericModal__body padding"
              >
                <div
                  class="channel-invite__wrapper"
                >
                  <div
                    class="channel-invite__content"
                  >
                    <div
                      class="filtered-user-list"
                    >
                      <div
                        class="filter-row"
                      >
                        <div
                          class="multi-select__container react-select"
                        >
                          <div
                            class="css-1dedlln"
                            id="selectItems"
                          >
                            <span
                              class="css-1f43avz-a11yText-A11yText"
                              id="react-select-4-live-region"
                            />
                            <span
                              aria-atomic="false"
                              aria-live="polite"
                              aria-relevant="additions text"
                              class="css-1f43avz-a11yText-A11yText"
                              role="log"
                            />
                            <div
                              class="react-select-auto react-select__control css-13cymwt-control"
                            >
                              <div
                                class="react-select-auto react-select__value-container react-select-auto react-select__value-container--is-multi css-hlgwow"
                              >
                                <div
                                  class="react-select-auto react-select__placeholder css-1jqq78o-placeholder"
                                  id="react-select-4-placeholder"
                                >
                                  Search for people or groups
                                </div>
                                <div
                                  class="react-select-auto react-select__input-container css-19bb58m"
                                  data-value=""
                                >
                                  <input
                                    aria-activedescendant=""
                                    aria-autocomplete="list"
                                    aria-describedby="react-select-4-placeholder"
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    aria-invalid="false"
                                    aria-label="Search for people or groups"
                                    autocapitalize="none"
                                    autocomplete="off"
                                    autocorrect="off"
                                    class="react-select-auto react-select__input"
                                    id="react-select-4-input"
                                    role="combobox"
                                    spellcheck="false"
                                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                    tabindex="0"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="multi-select__help"
                          id="multiSelectHelpMemberInfo"
                        />
                      </div>
                      <div
                        class="multi-select__help"
                        id="multiSelectMessageNote"
                      />
                    </div>
                    <div
                      class="multi-select__footer modal-footer"
                    >
                      <button
                        class="btn btn-tertiary btn-tertiary tertiary-button"
                      >
                        Cancel
                      </button>
                      <button
                        class="btn btn-primary "
                        data-testid="saveSetting"
                        id="saveItems"
                        type="submit"
                      >
                        <span>
                          Add
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
